--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "ol": "^9.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-pro-sidebar": "^1.1.0"
+    "react-pro-sidebar": "^1.1.0",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-transition-group": "^4.4.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
