--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apache-arrow/es2015-cjs": "^16.0.0",
+    "@loaders.gl/arrow": "^4.2.1",
+    "@loaders.gl/core": "^4.2.1",
     "@types/ol": "^7.0.0",
+    "@types/shpjs": "^3.4.7",
+    "apache-arrow": "^16.0.0",
     "next": "14.2.3",
     "ol": "^9.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-pro-sidebar": "^1.1.0",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "shpjs": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
